--- a/ml.tex
+++ b/ml.tex
@@ -162,7 +162,7 @@ This train/test split method is fundamental to machine learning as it ensures th
     
     What can we do in this case? Well, we can penalize weights becoming too high by modifying our SSE optimization objective to include a term that increases as the weights do. This will encourage the model to find a solution for $\hat{\textbf{w}}$ while keeping the weights more balanced. What this term is determines which linear regression variant we get. If we use the L2-norm, we get \textbf{Ridge regression}. If we use the L1-norm, we get \textbf{LASSO} regression. If we use both, we get \textbf{ElasticNet}. This last model is beyond the scope of this article, but we will explore how the first two behave.
 
-    But first, what are the L2 and L1 norms? These norms are mathematical functions that map from vector space to scalar space ($\mathbb{R}^n \rightarrow \mathbb{R})$. They are defined as such:
+    But first, what are the L2 and L1 norms? These norms are mathematical functions that map from vector space to scalar space ($\mathbb{R}^n \rightarrow \mathbb{R}$). They are defined as such:
 
     \begin{align*}
       \|\textbf{x}\|_2 &= \sqrt{\sum_{i=1}^n x_i^2} \\
@@ -209,7 +209,7 @@ This train/test split method is fundamental to machine learning as it ensures th
     \item Rewrite the euclidean distance formula $d(x,y) = \sqrt{\sum_{i=1}^n (x_i-y_i)^2}$ using the L2-norm $||\textbf{x}||$ given two vectors $\textbf{x}$ and $\textbf{y}$. Do you notice any relationship between the L2-norm and euclidean distance?
     \item In your own words, what are the differences between Ordinary, Ridge, and LASSO regressions?
     \item \textbf{Bonus:} Solve for $\hat{\textbf{w}}$ in the Ridge regression setting. Here is the equation:
-      \[\argmin_w \sum_{i=1}^n (y_i - \hat{y}_i)^2 + \lambda||\hat{\textbf{w}}||_2^2.\]
+      \[\argmin_\hat{\mathbf{w}} \sum_{i=1}^n (y_i - \hat{y}_i)^2 + \lambda||\hat{\textbf{w}}||_2^2.\]
       Your answer should be the closed form solution for Ridge regression and the proof should be similar to the one given for ordinary linear regression.
 \end{enumerate}
 \end{questionbox}
