--- a/ml.tex
+++ b/ml.tex
@@ -209,7 +209,7 @@ This train/test split method is fundamental to machine learning as it ensures th
     \item Rewrite the euclidean distance formula $d(x,y) = \sqrt{\sum_{i=1}^n (x_i-y_i)^2}$ using the L2-norm $||\textbf{x}||$ given two vectors $\textbf{x}$ and $\textbf{y}$. Do you notice any relationship between the L2-norm and euclidean distance?
     \item In your own words, what are the differences between Ordinary, Ridge, and LASSO regressions?
     \item \textbf{Bonus:} Solve for $\hat{\textbf{w}}$ in the Ridge regression setting. Here is the equation:
-      \[\argmin_\hat{\mathbf{w}} \sum_{i=1}^n (y_i - \hat{y}_i)^2 + \lambda||\hat{\textbf{w}}||_2^2.\]
+      \[\argmin_{\hat{\mathbf{w}}} \sum_{i=1}^n (y_i - \hat{y}_i)^2 + \lambda||\hat{\textbf{w}}||_2^2.\]
       Your answer should be the closed form solution for Ridge regression and the proof should be similar to the one given for ordinary linear regression.
 \end{enumerate}
 \end{questionbox}
